--- a/README
+++ b/README
@@ -1,7 +1,9 @@
+## Default config of dmenu
+
 ## Installation
 
 ```
-git clone https://github.com//
+git clone https://github.com/Coelll/dmenu
 cd dwm
 sudo make install
 ```
