--- a/README
+++ b/README
@@ -1,6 +1,8 @@
-## Default config of dmenu
+Default config of dmenu.
+-----------------------
 
-## Installation
+Installation.
+-------------
 
 ```
 git clone https://github.com/Coelll/dmenu
